--- a/package.json
+++ b/package.json
@@ -5,9 +5,12 @@
   "dependencies": {
     "color": "^2.0.0",
     "react": "^15.6.1",
+    "react-collapse": "^4.0.3",
     "react-dom": "^15.6.1",
+    "react-motion": "^0.5.2",
     "react-scripts": "1.0.13",
     "react-studs": "^0.3.4",
+    "react-syntax-highlighter": "^5.7.0",
     "styled-components": "^2.1.2"
   },
   "scripts": {
